--- a/index.html
+++ b/index.html
@@ -22,15 +22,13 @@
         <header class="navcontainer">
             <div class="navcard">       
                 <div class="navbutton">
-                    <div class="strip"></div>
-                    <div class="strip"></div>
-                    <div class="strip"></div>
+                    <div class="navIcon"></div>
                 </div>
                 <ul class="navlist">
                     <li class="navitem"><a href="#greentech">Greentech</a></li>
-                    <li class="navitem"><a href="#innovation">Featured Innovation</a></li>
                     <li class="navitem"><a href="#benefit">Benefit</a></li>
                     <li class="navitem"><a href="#tech">Technology</a></li>
+                    <li class="navitem"><a href="#innovation">Featured Innovation</a></li>
                 </ul>
             </div>
         </header>
@@ -45,11 +43,12 @@
                         of products, systems and processes that use resources efficiently, 
                         produce minimal environmental impact, promote long-term sustainability, reduce greenhouse gas emissions and pollution.
                     </p>
-                    <button>Learn More</button>
                 </div>
                 <div class="headimg"></div>
             </div>
         </div>
+
+        <div class="thinLine"></div>
 
 
         <section class="p1Sect1" id="greentech">
@@ -72,7 +71,6 @@
 
             <div class="title-benefit">
                 <h3>Benefit Of Greentech</h3>
-                <p>Ini yang kamu proleh dari mempelajari greentech</p>
             </div>
 
             <div class="box-card-benefit">
@@ -124,7 +122,7 @@
         
         <!-- CSS = line-559 sampai line-778  -->
         <section class="technology">
-            <h2 id="h2his"> Technology</h2>
+            <h2 id="h2his">Greentech Technology</h2>
             <div class="techSegment">
                 <div class="techTextBox">
                     <h2>Renewable Energy Technologies</h2>
@@ -177,55 +175,39 @@
         
 
 
-        <h2 id="sliderh2">Gerakan Greentech</h2>
-        <div class="innovationContainer" id="innovation">
-            <div class="slideInnovation Active">
+        <h2 id="sliderh2">Also read</h2>
+        <div class="newssContainer" id="innovation">
+            <div class="slideNewss Active">
                 <div class="slideContent">
                     <div class="textBoxSlide">
-                        <h2 class="slideTitle">Solar Panel</h2>
+                        <h2 class="slideTitle">Sosialisasi Greentech</h2>
                         <p class="slideDesc">
-                            A solar panel is a device used to convert sunlight into electrical energy using the principle of the photovoltaic effect. 
-                            It consists of solar cells (usually made from semiconductor materials like silicon) that capture sunlight and generate direct 
-                            current (DC) electricity.
+                            description text.
                         </p>
                         <div class="slideButton">Learn More</div>
                     </div>
                     <div class="imgSlideContent">
-                        <img src="styles/assets/solarpanel.jpg" alt="hehe" class="innovationImg">
+                        <img src="styles/assets/test2.jpeg" alt="hehe" class="newssImg">
                     </div>
                 </div>
             </div>
-            <div class="slideInnovation">
+            <div class="slideNewss">
                 <div class="slideContent">
                     <div class="textBoxSlide">
-                        <h2 class="slideTitle">Electric Vehicle</h2>
+                        <h2 class="slideTitle">text</h2>
                         <p class="slideDesc">
-                            An electric vehicle (EV) is a vehicle powered by an electric motor and obtains its energy from a rechargeable battery, rather than from an internal combustion engine that uses gasoline or diesel.
+                            text.
                         </p>
+                        <div class="slideButton">Learn More</div>
                     </div>
                     <div class="imgSlideContent">
-                        <img src="styles/assets/vehicle.jpg" alt="hehe" class="innovationImg">
-                    </div>
-                </div>
-            </div>
-            <div class="slideInnovation">
-                <div class="slideContent">
-                    <div class="textBoxSlide">
-                        <h2 class="slideTitle">LED light</h2>
-                        <p class="slideDesc">
-                            LED (Light Emitting Diode) is an electronic component that emits light when an electric current flows through it. 
-                            LED technology is used for lighting because it is more energy-efficient, long-lasting, and environmentally friendly compared to incandescent or fluorescent lamps.
-                        </p>
-                    </div>
-                    <div class="imgSlideContent">
-                        <img src="styles/assets/led.jpg" alt="hehe" class="innovationImg">
+                        <img src="styles/assets/test.png" alt="hehe" class="newssImg">
                     </div>
                 </div>
             </div>
             <div class="thumbnailContainer">
-                <img src="styles/assets/solarpanel.jpg" alt="plant" class="Thumbnail Active" data-slide="0" tabindex="0">
-                <img src="styles/assets/vehicle.jpg" alt="truck" class="Thumbnail" data-slide="1" tabindex="0">
-                <img src="styles/assets/led.jpg" alt="drone" class="Thumbnail" data-slide="2" tabindex="0">
+                <img src="styles/assets/test2.jpeg" alt="img1" class="Thumbnail Active" data-slide="0" tabindex="0">
+                <img src="styles/assets/test.png" alt="img2" class="Thumbnail" data-slide="1" tabindex="0">
             </div>
         </div>
 
