--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 
             <div class="title-benefit">
                 <h3>Benefit Of Greentech</h3>
+                <p> Discover how green technology contributes to environmental protection, economic growth, and healthier communities</p>
             </div>
 
             <div class="box-card-benefit">
@@ -96,6 +97,10 @@
                     <p>Reduce poliution and conserve natural resaurces</p>
                 </div>
 
+            </div>
+
+            <div class="tambhan">
+                
             </div>
         </div>
 
@@ -228,7 +233,7 @@
                 </div>
 
                 <div class="box-text-order1">
-                    <h2>About Us</h2>
+                    <h2>Information</h2>
                     <p class="textfot">-> Greentech</p>
                     <p class="textfot">-> Featured Innovation</p>
                     <p class="textfot">-> History</p>
