--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                         <p class="slideDesc">
                             description text.
                         </p>
-                        <div class="slideButton">Learn More</div>
+                        <div class="slideButton">Visit</div>
                     </div>
                     <div class="imgSlideContent">
                         <img src="styles/assets/test2.jpeg" alt="hehe" class="newssImg">
@@ -199,7 +199,7 @@
                         <p class="slideDesc">
                             text.
                         </p>
-                        <div class="slideButton">Learn More</div>
+                        <div class="slideButton">Visit</div>
                     </div>
                     <div class="imgSlideContent">
                         <img src="styles/assets/test.png" alt="hehe" class="newssImg">
