res benefit-footer

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                     </div>
 
                     <div class="text-icons">
-                        <p class="textfot">Ikuti kami di media sosial untuk update terbaru tentang teknologi ramah lingkungan dan inovasi dari Greentech.</p>
+                        <p class="textfot">Want to learn more about green solutions for the future? Follow us for in-depth insights into Greentech.</p>
                     </div>
                       <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
                       <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
@@ -234,16 +234,14 @@
                 <div class="box-text-order1">
                     <h2>Information</h2>
                     <p class="textfot">-> Greentech</p>
-                    <p class="textfot">-> Featured Innovation</p>
-                    <p class="textfot">-> History</p>
                     <p class="textfot">-> Benefit</p>
                     <P class="textfot">-> Technology</P>
                 </div>
 
                 <div class="box-text-order1">
-                    <h2>Support</h2>
-                    <p class="textfot">-> Contact us</p>
-                    <p class="textfot">-> Communty</p>
+                    <h2>Get Involved</h2>
+                    <p class="textfot">-> Contact</p>
+                    <p class="textfot">-> Community</p>
                 </div>
 
 
