--- a/index.html
+++ b/index.html
@@ -20,7 +20,13 @@
         
         <!-- CSS = line-1 sampai line-197 -->
         <header class="navcontainer">
-            <div class="navcard">       
+            <div class="navbutton">
+                <div class="strip"></div>
+                <div class="strip"></div>
+                <div class="strip"></div>
+            </div>
+            <div class="navcard"> 
+                <div class="navback"></div>
                 <ul class="navlist">
                     <li class="navitem"><a href="#greentech">Greentech</a></li>
                     <li class="navitem"><a href="#benefit">Benefit</a></li>
