--- a/index.html
+++ b/index.html
@@ -31,26 +31,29 @@
                     <li class="navitem"><a href="#greentech">Greentech</a></li>
                     <li class="navitem"><a href="#benefit">Benefit</a></li>
                     <li class="navitem"><a href="#tech">Technology</a></li>
+                    <li class="navitem"><a href="#news">News</a></li>
                 </ul>
             </div>
         </header>
-
-        <div class="page1Header">
-            <div class="imgPage1"></div>
-            <div class="p1HeadText" id="white">
-                <div>
-                    <h1 id="white" class="headh1">GreenTech</h1>
-                    <p id="heheheh" class="phead">
-                        Green Technology is a branch of technology that focuses on the development and application 
-                        of products, systems and processes that use resources efficiently, 
-                        produce minimal environmental impact, promote long-term sustainability, reduce greenhouse gas emissions and pollution.
-                    </p>
+        <div class="heh">
+            <div class="thinLine"></div>
+            <div class="page1Header">
+                <div class="imgPage1"></div>
+                <div class="p1HeadText" id="white">
+                    <div>
+                        <h1 id="white" class="headh1">GreenTech</h1>
+                        <p id="heheheh" class="phead">
+                            Green Technology is a branch of technology that focuses on the development and application 
+                            of products, systems and processes that use resources efficiently, 
+                            produce minimal environmental impact, promote long-term sustainability, reduce greenhouse gas emissions and pollution.
+                        </p>
+                    </div>
+                    <div class="headimg"></div>
                 </div>
-                <div class="headimg"></div>
             </div>
-        </div>
 
-        <div class="thinLine"></div>
+            <div class="thinLine"></div>
+        </div>
 
 
         <section class="p1Sect1" id="greentech">
@@ -128,7 +131,7 @@
         
         
         <!-- CSS = line-559 sampai line-778  -->
-        <section class="technology">
+        <section class="technology" id="tech">
             <h2 id="h2his">Greentech Technology</h2>
             <div class="techSegment">
                 <div class="techTextBox">
@@ -183,7 +186,7 @@
 
 
         <h2 id="sliderh2">Also read</h2>
-        <div class="newssContainer" id="innovation">
+        <div class="newssContainer" id="innovation news">
             <div class="slideNewss Active">
                 <div class="slideContent">
                     <div class="textBoxSlide">
