--- a/news.html
+++ b/news.html
@@ -17,22 +17,22 @@
 
     </head>
     <body>
-        <section class="navSegmentss">
-            <div class="nav-left">
-                <div class="nav-strip-btn">
-                    <div class="nav-strip"></div>
-                    <div class="nav-strip"></div>
-                    <div class="nav-strip"></div>
-                </div>
-                <div class="nav-circle"></div>
+        <header class="navcontainer">
+            <div class="navbutton">
+                <div class="strip"></div>
+                <div class="strip"></div>
+                <div class="strip"></div>
             </div>
-            <div class="nav-middle">
-
+            <div class="navcard"> 
+                <div class="navback"></div>
+                <ul class="navlist">
+                    <li class="navitem"><a href="index.html">Home</a></li>
+                    <li class="navitem"><a href="#benefit">Benefit</a></li>
+                    <li class="navitem"><a href="#tech">Technology</a></li>
+                    <li class="navitem"><a href="#news">News</a></li>
+                </ul>
             </div>
-            <div class="nav-right">
-
-            </div>
-        </section>
+        </header>
         
 
 
