--- a/index.html
+++ b/index.html
@@ -40,12 +40,15 @@
             <div class="page1Header">
                 <div class="imgPage1"></div>
                 <div class="p1HeadText" id="white">
-                    <div>
+                    <div class="huh">
                         <h1 id="white" class="headh1">GreenTech</h1>
                         <p id="heheheh" class="phead">
                             Green Technology is a branch of technology that focuses on the development and application 
                             of products, systems and processes that use resources efficiently, 
                             produce minimal environmental impact, promote long-term sustainability, reduce greenhouse gas emissions and pollution.
+                        </p>
+                        <p id="heheheh" class="mob">
+                            Driving Tomorrow with Clean and Smart Solutions
                         </p>
                     </div>
                     <div class="headimg"></div>
