--- a/index.html
+++ b/index.html
@@ -60,7 +60,17 @@
 
 
         <section class="p1Sect1" id="greentech">
-            
+            <div class="card1p1">
+                <div class="textbox1">
+                    <h2>What is Greentech ?</h2>
+                    <p id="heheheh">
+                        <span>Green Technology</span> is a branch of technology that focuses on the development and application 
+                        of products, systems and processes that use resources efficiently, 
+                        produce minimal environmental impact, promote long-term sustainability, reduce greenhouse gas emissions and pollution.
+                    </p>
+                </div>
+                <div class="p1img1"></div>
+            </div>
             <div class="card1p1 card2p1">
                 <div class="p1img1"></div>
                 <div class="textbox1">
