--- a/news.html
+++ b/news.html
@@ -109,6 +109,7 @@
                             pengalaman, serta ketertarikan mereka terhadap penerapan teknologi ramah lingkungan. Diskusi ini menjadi ruang terbuka bagi 
                             para peserta untuk menggali ruang ide dan solusi bersama.
                         </p>
+                        <div class="newssimgg"></div>
                         <p>
                             Kegiatan road show ini mendapat sambutan positif dari para peserta. 
                             Banyak mahasiswa yang merasa kegiatan ini membuka wawasan baru 
