--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <div class="card-items-benefit">
                     <img src="./styles/assets/energy.png" alt="">
                     <h4>Energy Efficiency</h4>
-                    <p>Reduce poliution and conserve natural resaurces</p>
+                    <p>Reduce pollution and conserve natural resources</p>
                 </div>
 
             </div>
