--- a/news.html
+++ b/news.html
@@ -109,7 +109,16 @@
                             pengalaman, serta ketertarikan mereka terhadap penerapan teknologi ramah lingkungan. Diskusi ini menjadi ruang terbuka bagi 
                             para peserta untuk menggali ruang ide dan solusi bersama.
                         </p>
-                        <div class="newssimgg"></div>
+                        <div class="gridImg">
+                            <div class="gridRow1">
+                                <div class="newssimgg"></div>
+                                <div class="newssimgg2"></div>
+                            </div>
+                            <div class="gridRow2">
+                                <div class="newssimgg3"></div>
+                                <div class="newssimgg4"></div>
+                            </div>
+                        </div>
                         <p>
                             Kegiatan road show ini mendapat sambutan positif dari para peserta. 
                             Banyak mahasiswa yang merasa kegiatan ini membuka wawasan baru 
