--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                     <div class="textBoxSlide">
                         <h2 class="slideTitle">Sosialisasi Greentech</h2>
                         <p class="slideDesc">
-                            description text.
+                            Sosialisasi generasi hijau peduli teknologi dan lingkungan
                         </p>
                         <div class="slideButton"><a href="news.html">Visit</a></div>
                     </div>
@@ -199,9 +199,9 @@
             <div class="slideNewss">
                 <div class="slideContent">
                     <div class="textBoxSlide">
-                        <h2 class="slideTitle">text</h2>
+                        <h2 class="slideTitle">Sosialisasi Greentech</h2>
                         <p class="slideDesc">
-                            text.
+                            Sosialisasi generasi hijau peduli teknologi dan lingkungan
                         </p>
                         <div class="slideButton"><a href="news.html">Visit</a></div>
                     </div>
