--- a/news.html
+++ b/news.html
@@ -35,6 +35,7 @@
 
         <section class="newsMain">
             <div class="news">
+                <h1 class="newsh1">Sosialisasi generasi hijau peduli teknologi dan lingkungan</h1>
                 <div class="news-head">
 
                 </div>
