--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
             <div class="navcard"> 
                 <div class="navback"></div>
                 <ul class="navlist">
-                    <li class="navitem"><a href="#greentech">Greentech</a></li>
-                    <li class="navitem"><a href="#benefit">Benefit</a></li>
-                    <li class="navitem"><a href="#tech">Technology</a></li>
-                    <li class="navitem"><a href="#news">News</a></li>
+                    <li class="navitem"><a href="#greentech" tabindex="0">Greentech</a></li>
+                    <li class="navitem"><a href="#benefit" tabindex="0">Benefit</a></li>
+                    <li class="navitem"><a href="#tech" tabindex="0">Technology</a></li>
+                    <li class="navitem"><a href="#news" tabindex="0">News</a></li>
                 </ul>
             </div>
         </header>
@@ -127,7 +127,7 @@
 
         <!-- CSS = line-559 sampai line-778  -->
         <section class="technology" id="tech">
-            <h2 id="h2his">Greentech Technology</h2>
+            <h2 >Greentech Technology</h2>
             <div class="techSegment">
                 <div class="techTextBox">
                     <h2>Renewable Energy Technologies</h2>
@@ -179,43 +179,43 @@
         </section>
         
 
-
-        <h2 id="sliderh2">Also read</h2>
-        <div class="newssContainer" id="news">
-            <div class="slideNewss Active">
-                <div class="slideContent">
-                    <div class="textBoxSlide">
-                        <h2 class="slideTitle">Sosialisasi Greentech</h2>
-                        <p class="slideDesc">
-                            Sosialisasi generasi hijau peduli teknologi dan lingkungan
-                        </p>
-                        <div class="slideButton"><a href="news.html">Visit</a></div>
-                    </div>
-                    <div class="imgSlideContent">
-                        <img src="styles/assets/test2.jpeg" alt="hehe" class="newssImg">
-                    </div>
-                </div>
-            </div>
-            <div class="slideNewss">
-                <div class="slideContent">
-                    <div class="textBoxSlide">
-                        <h2 class="slideTitle">Sosialisasi Greentech</h2>
-                        <p class="slideDesc">
-                            Sosialisasi generasi hijau peduli teknologi dan lingkungan
-                        </p>
-                        <div class="slideButton"><a href="news.html">Visit</a></div>
-                    </div>
-                    <div class="imgSlideContent">
-                        <img src="styles/assets/test.png" alt="hehe" class="newssImg">
+        <div class="newsback">
+            <h2 id="sliderh2">Also read</h2>
+            <div class="newssContainer" id="news">
+                <div class="slideNewss Active">
+                    <div class="slideContent">
+                        <div class="textBoxSlide">
+                            <h2 class="slideTitle">Sosialisasi Greentech</h2>
+                            <p class="slideDesc">
+                                Sosialisasi generasi hijau peduli teknologi dan lingkungan
+                            </p>
+                            <div class="slideButton"><a href="news.html" tabindex="0">Visit</a></div>
+                        </div>
+                        <div class="imgSlideContent">
+                            <img src="styles/assets/test2.jpeg" alt="hehe" class="newssImg">
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="thumbnailContainer">
-                <img src="styles/assets/test2.jpeg" alt="img1" class="Thumbnail Active" data-slide="0" tabindex="0">
-                <img src="styles/assets/test.png" alt="img2" class="Thumbnail" data-slide="1" tabindex="0">
+                <div class="slideNewss">
+                    <div class="slideContent">
+                        <div class="textBoxSlide">
+                            <h2 class="slideTitle">Sosialisasi Greentech</h2>
+                            <p class="slideDesc">
+                                Sosialisasi generasi hijau peduli teknologi dan lingkungan
+                            </p>
+                            <div class="slideButton"><a href="news.html" tabindex="0">Visit</a></div>
+                        </div>
+                        <div class="imgSlideContent">
+                            <img src="styles/assets/test.png" alt="hehe" class="newssImg">
+                        </div>
+                    </div>
+                </div>
+                <div class="thumbnailContainer">
+                    <img src="styles/assets/test2.jpeg" alt="img1" class="Thumbnail Active" data-slide="0" tabindex="0">
+                    <img src="styles/assets/test.png" alt="img2" class="Thumbnail" data-slide="1" tabindex="0">
+                </div>
             </div>
         </div>
-
 
         <!-- CSS = line-784 sampai line-798  -->
         <footer>
