--- a/news.html
+++ b/news.html
@@ -26,7 +26,7 @@
             <div class="navcard"> 
                 <div class="navback"></div>
                 <ul class="navlist">
-                    <li class="navitem"><a href="index.html">Home</a></li>
+                    <li class="navitem"><a href="index.html" tabindex="0">Home</a></li>
                 </ul>
             </div>
         </header>
