--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
         <!-- CSS = line-559 sampai line-778  -->
         <section class="technology" id="tech">
-            <h2 >Greentech Technology</h2>
+            <h2 class="techh2">Greentech Technology</h2>
             <div class="techSegment">
                 <div class="techTextBox">
                     <h2>Renewable Energy Technologies</h2>
