--- a/news.html
+++ b/news.html
@@ -110,16 +110,18 @@
                             pengalaman, serta ketertarikan mereka terhadap penerapan teknologi ramah lingkungan. Diskusi ini menjadi ruang terbuka bagi 
                             para peserta untuk menggali ruang ide dan solusi bersama.
                         </p>
-                        <div class="gridImg">
-                            <div class="gridRow1">
-                                <div class="newssimgg"></div>
-                                <div class="newssimgg2"></div>
+                        <section class="nslideContainer">
+                            <div id="prev" tabindex="0"></div>
+                            <div id="next" tabindex="0"></div>
+                            <div class="nslide">
+                                <img src="styles/assets/kegiatan3.jpg" alt="img" id="lastclone">
+                                <img src="styles/assets/test2.jpg" alt="img1">
+                                <img src="styles/assets/kegiatan1.jpg" alt="img2">
+                                <img src="styles/assets/kegiatan2.jpg" alt="img3">
+                                <img src="styles/assets/kegiatan3.jpg" alt="img4">
+                                <img src="styles/assets/test2.jpg" alt="img" id="firstclone">
                             </div>
-                            <div class="gridRow2">
-                                <div class="newssimgg3"></div>
-                                <div class="newssimgg4"></div>
-                            </div>
-                        </div>
+                        </section>
                         <p>
                             Kegiatan road show ini mendapat sambutan positif dari para peserta. 
                             Banyak mahasiswa yang merasa kegiatan ini membuka wawasan baru 
