--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
                 <div class="strip"></div>
             </div>
             <div class="navcard"> 
-                <div class="navback"></div>
+                <div class="navback">
+                    <div class="stripb"></div>
+                    <div class="stripb"></div>
+                </div>
                 <ul class="navlist">
                     <li class="navitem"><a href="#greentech" tabindex="0">Greentech</a></li>
                     <li class="navitem"><a href="#benefit" tabindex="0">Benefit</a></li>
@@ -192,7 +195,7 @@
                             <div class="slideButton"><a href="news.html" tabindex="0">Visit</a></div>
                         </div>
                         <div class="imgSlideContent">
-                            <img src="styles/assets/test2.jpeg" alt="hehe" class="newssImg">
+                            <img src="styles/assets/test2.jpg" alt="hehe" class="newssImg">
                         </div>
                     </div>
                 </div>
@@ -211,7 +214,7 @@
                     </div>
                 </div>
                 <div class="thumbnailContainer">
-                    <img src="styles/assets/test2.jpeg" alt="img1" class="Thumbnail Active" data-slide="0" tabindex="0">
+                    <img src="styles/assets/test2.jpg" alt="img1" class="Thumbnail Active" data-slide="0" tabindex="0">
                     <img src="styles/assets/test.png" alt="img2" class="Thumbnail" data-slide="1" tabindex="0">
                 </div>
             </div>
