--- a/news.html
+++ b/news.html
@@ -66,13 +66,13 @@
                             yang kelak akan menjadi pelaku utama dalam pengembangan inovasi teknologi di masa depan.
                         </p>
                         <p>
-                            Road show ini di ikuti lebih dari 60 peserta dari jurusan fakultas sitem teknologi dan informasi, 
-                            serta di hadiri oleh kaprodi fakultas sistem teknologi dan informasi. Dalam acara ini para peserta mendapatkan 
+                            Road show ini di ikuti lebih dari 60 peserta dari jurusan fakultas teknik dan ilmu komputer, 
+                            serta di hadiri oleh kaprodi fakultas teknik dan ilmu komputer. Dalam acara ini para peserta mendapatkan 
                             pemahaman tentang konsep green tech serta penggunaan energy terbarukan, 
                             pengelolaan limbah berbasiis teknologi, serta pengembangan produk ramah lingkungan
                         </p>
                         <p id="p">
-                            Sebagai ketua pelaksana Indri Kirani Nurlita menyampaikan bahwa kegiatan yang beratjuk pada green tech ini di landasi 
+                            Sebagai ketua pelaksana Indri Kirani Nurlita menyampaikan bahwa kegiatan yang bertujuan pada green tech ini di landasi 
                             oleh semangat untuk memperkenanlkan dan 
                             mengajak untuk mengimplementasikan Green Technology atau Teknologi Hijau kepada generasi muda ataupun para mahasiswa
                         </p>
@@ -128,7 +128,7 @@
                             mengenai teknologi hijau yang sebelumnya hanya mereka kenal sebatas teori di bangku kuliah.
                         </p>
                         <p>
-                            Salah satu peserta, Rizky Pratama, mahasiswa jurusan Sistem Informasi, mengungkapkan bahwa 
+                            Salah satu peserta, Rizky Pratama, mahasiswa jurusan Sistem Teknologi Informasi, mengungkapkan bahwa 
                             kegiatan ini membuatnya lebih termotivasi untuk mengembangkan ide proyek berbasis energi terbarukan.
                             “Materinya sangat relevan dengan tantangan zaman sekarang. Saya jadi berpikir untuk mengembangkan aplikasi 
                             monitoring penggunaan energi ramah lingkungan yang bisa dipakai di rumah tangga,” ujarnya.
