--- a/news.html
+++ b/news.html
@@ -117,6 +117,7 @@
                                 <img src="styles/assets/kegiatan3.jpg" alt="img" id="lastclone">
                                 <img src="styles/assets/test2.jpg" alt="img1">
                                 <img src="styles/assets/kegiatan1.jpg" alt="img2">
+                                <img src="styles/assets/keg4.jpg" alt="img2">
                                 <img src="styles/assets/kegiatan2.jpg" alt="img3">
                                 <img src="styles/assets/kegiatan3.jpg" alt="img4">
                                 <img src="styles/assets/test2.jpg" alt="img" id="firstclone">
